# poly-exploration

./: .coveralls.yml  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  lgtm.yml  package.xml
.circleci/: config.yml
cmake/: poly_exploration-config.cmake.in
include/: Geometry.h  Point.h  Polygon.h  PolygonConsolidation.h  PolygonExplorer.h  PolygonPoint.h  PoseGraph.h  PoseGraphPose.h  pose.h
include/poly_exploration/: Geometry.h  Point.h  PolygonConsolidation.h  PolygonExplorer.h  PolygonExplorerInterface.h  PolygonPoint.h  PoseGraph.h  PoseGraphPose.h
src/: CMakeLists.txt  Point.cpp  Polygon.cpp  PolygonConsolidation.cpp  PolygonExplorer.cpp  PolygonPoint.cpp  PoseGraph.cpp  PoseGraphPose.cpp  main.cpp
test/: CMakeLists.txt  main.cpp  test-Point.cpp  test-Polygon.cpp  test-PolygonConsolidation.cpp  test-PolygonExplorer.cpp  test-PolygonExplorerInterface.cpp  test-PolygonPoint.cpp  test-PoseGraph.cpp  test-PoseGraphPose.cpp
